# mini-ansible

./: .gitignore  README.md  __main__.py  cli.py  main.py  pyproject.toml
core/: executor.py  inventory.py  task_runner.py
examples/: inventory.ini  playbook.yaml
examples/advanced/: deploy-mysql.yaml  simple-flask-deploy.yml  ssh-hardening.yaml  test-conditionals.yaml
examples/basics/: basic-setup.yaml  copy-and-deploy.yaml  nginx-install.yaml  users-and-permissions.yaml
examples/config/: index.html
modules/: apt.py  copy.py  file.py  git.py  pip.py  service.py  shell.py  systemd.py  template.py  user.py  wait_for.py  yum.py
utils/: sudo.py
